--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
