--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "seed": "node seeds/seed.js",
     "watch": "nodemon"
   },
